# LLM-Test-Task

./: .env-example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/api/: dependencies.py
backend/api/routers/: __init__.py  broker.py  message.py  user.py
backend/api/schemas/: user.py
backend/api/service/: message.py  user.py
backend/core/: config.py
backend/database/: engine.py
backend/database/models/: generated_answer.py  message.py  moderator.py
backend/distributors/llm_model/: consumer.py  distributor.py  main.py
backend/migrations/: env.py
backend/schemas/: answer.py  message.py  user.py
backend/service/: answer.py  conversation.py  llm.py  message.py  rabbit_client.py  user.py
backend/worker/: celery.py  tasks.py
bot/: .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml  settings.py
bot/core/: config.py
bot/database/: redis.py
bot/database/models/: message.py  to_send.py  user.py
bot/migrations/: env.py
bot/routers/: broker.py  messenger.py  respondent.py  start.py  welcome.py
bot/schemas/: message.py  user.py
bot/service/: messenger.py  user.py
bot/utils/: caching.py
celery_worker/: Dockerfile  main.py  pyproject.toml
common/broker/: rabbitmq.py
common/database/: engine.py
common/database/models/: __init__.py  base.py  generated_answer.py  moderator.py  to_send.py  user.py
ollama_service/: Dockerfile  consumer.py  distributor.py  main.py  pyproject.toml
