[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.5",
    "aiohttp>=3.12.13",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.5.3",
    "fastapi>=0.115.14",
    "ollama>=0.5.1",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
