[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.5.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.41",
]
